# magic-window

./: README.md  pyproject.toml
magic_window/: __main__.py
magic_window/stubs/i3ipc/: __init__.pyi  con.pyi  connection.pyi  events.pyi  model.pyi  replies.pyi
magic_window/stubs/i3ipc/_private/: __init__.pyi  pubsub.pyi  sync.pyi  types.pyi
magic_window/stubs/i3ipc/aio/: connection.pyi
tests/: test_magic_window.py
