[tool.poetry]
name = "magic-window"
version = "0.1.0"
description = ""
authors = ["Sean Collings <seanrcollings@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
i3ipc = "^2.2.1"
arc-cli = "^6.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"
pylint = "^2.12.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
magic-window = "magic_window.__main__:cli"